--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,11 @@
             <version>4.4.2</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.10.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
