add minio to project

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.4.3</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
