--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,20 @@
         <finalName>cyber-games</finalName>
         <plugins>
             <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <to>
+                        <image>registry.hub.docker.com/debuffi/anystats</image>
+                        <auth>
+                            <username>debuffi</username>
+                            <password>123</password>
+                        </auth>
+                    </to>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
